--- a/contact.html
+++ b/contact.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="canonical" href="">
+    <title>تماس با سامترونیک | تعمیر لپتاپ و تجهیزات الکترونیکی در کرج</title>
+    <meta name="description" content="برای ارتباط با سامترونیک و دریافت مشاوره رایگان در زمینه تعمیرات لپتاپ، اینورتر، باند بلوتوث، پاوربانک، مودم، اسپیکر و سایر تجهیزات الکترونیکی با ما تماس بگیرید.">
+    <meta name="keywords" content="تماس سامترونیک, تماس تعمیر لپتاپ کرج, شماره تلفن تعمیرگاه لپتاپ, مشاوره تعمیر لپتاپ, تعمیر تجهیزات الکترونیکی کرج">
+    <link rel="canonical" href="https://samserv.ir/contact.html">
     <!-- Tailwind CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- فونت فارسی Vazirmatn -->
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/dist/font-face.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <style>
       body, h1, h2, h3, h4, h5, h6, input, textarea, button {
         font-family: 'Vazirmatn', 'Tahoma', sans-serif !important;
@@ -22,8 +22,8 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "تعمیرگاه لپتاپ Samtronic",
-      "image": "https://example.com/photos/1x1/photo.jpg",
+      "name": "تعمیرگاه سامترونیک",
+      "image": "https://samserv.ir/assets/images/logo.png",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "کرج - مهرشهر بلوار امیرکبیر پاساژ بوستان مهر 2 زیرزمین واحد 7",
@@ -60,14 +60,14 @@
 <body class="font-sans bg-gradient-to-t from-gray-50 to-gray-200 min-h-screen">
     <header class="bg-blue-800 text-white shadow-lg">
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="/index.html" class="text-2xl font-bold">Samtronic</a>
+            <a href="index.html" class="text-2xl font-bold">سامترونیک</a>
             <ul class="flex space-x-4 space-x-reverse">
-                <li><a href="/index.html" class="hover:text-blue-200">خانه</a></li>
-                <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                <li><a href="/learn.html" class="hover:text-blue-200">آموزش</a></li>
-                <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                <li><a href="index.html" class="hover:text-blue-200">خانه</a></li>
+                <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                <li><a href="learn.html" class="hover:text-blue-200">آموزش</a></li>
+                <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
             </ul>
         </nav>
     </header>
@@ -82,19 +82,19 @@
         </h2>
         <div class="flex flex-wrap gap-6 items-center justify-center">
             <div class="flex flex-col items-center">
-                <img src="assets/images/license%20ccna.JPG" alt="مدرک CCNA سامترونیک" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
+                <img src="assets/images/license-ccna.png" alt="مدرک CCNA سامترونیک" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
                 <span class="text-sm text-blue-700 font-semibold">مدرک CCNA</span>
             </div>
             <div class="flex flex-col items-center">
-                <img src="assets/images/license%20mtcna.JPG" alt="مدرک MTCNA سامترونیک" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
+                <img src="assets/images/license-mtcna.png" alt="مدرک MTCNA سامترونیک" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
                 <span class="text-sm text-blue-700 font-semibold">مدرک MTCNA</span>
             </div>
             <div class="flex flex-col items-center">
-                <img src="assets/images/license%20repair%20board.JPG" alt="مدرک تعمیر برد لپتاپ" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
+                <img src="assets/images/license-repair-board.png" alt="مدرک تعمیر برد لپتاپ" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
                 <span class="text-sm text-blue-700 font-semibold">تعمیر برد لپتاپ</span>
             </div>
             <div class="flex flex-col items-center">
-                <img src="assets/images/license%20repair%20hardware%20phone.JPG" alt="مدرک تعمیر سخت افزار موبایل" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
+                <img src="assets/images/license-repair-phone.png" alt="مدرک تعمیر سخت افزار موبایل" class="w-40 h-40 object-contain rounded-xl shadow mb-2 border-2 border-blue-200 bg-white">
                 <span class="text-sm text-blue-700 font-semibold">تعمیر سخت افزار موبایل</span>
             </div>
         </div>
@@ -216,7 +216,7 @@ form.addEventListener('reset', function() {
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap justify-between gap-8">
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
-                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه لپتاپ Samtronic</h3>
+                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه سامترونیک</h3>
                     <p>ارائه خدمات تخصصی تعمیر لپتاپ با کیفیت بالا و گارانتی معتبر</p>
                 </div>
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
@@ -228,18 +228,18 @@ form.addEventListener('reset', function() {
                 <div class="w-full md:w-1/3">
                     <h3 class="text-xl font-semibold mb-4">لینک‌های مفید</h3>
                     <ul>
-                        <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                        <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                        <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                        <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                        <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                        <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                        <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                        <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
                     </ul>
                 </div>
             </div>
             <div class="mt-8 text-center">
-                <p>&copy; 2025 تعمیرگاه لپتاپ Samtronic. تمامی حقوق محفوظ است.</p>
+                <p>&copy; 2025 تعمیرگاه سامترونیک. تمامی حقوق محفوظ است.</p>
             </div>
         </div>
     </footer>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
