--- a/services.html
+++ b/services.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="canonical" href="">
+    <title>خدمات تعمیرات لپتاپ و دستگاه‌های الکترونیکی | سامترونیک کرج</title>
+    <meta name="description" content="معرفی خدمات تعمیرات سامترونیک شامل تعمیر لپتاپ، اینورتر، باند بلوتوث، پاوربانک، مودم، آداپتور، ایرپاد، اسپیکر، هدفون، هدست، مانیتور، رایانه شخصی، رسیور، تلویزیون، برد تغذیه سوئیچینگ، آیفون درب بازکن، پاور کامپیوتر و پرینتر.">
+    <meta name="keywords" content="خدمات تعمیر لپتاپ, تعمیر دستگاه اینورتر, تعمیر باند بلوتوث, تعمیر پاوربانک, تعمیر مودم, تعمیر مودم سیمکارتی, تعمیر آداپتور لپتاپ, تعمیر ایرپاد, تعمیر اسپیکر, تعمیر هدفون, تعمیر هدست, تعمیر مانیتور, تعمیر رایانه شخصی, تعمیر رسیور, تعمیر تلویزیون, تعمیر برد تغذیه سوئیچینگ, تعمیر آیفون درب بازکن, تعمیر پاور کامپیوتر, تعمیر پرینتر, سامترونیک">
+    <link rel="canonical" href="https://samserv.ir/services.html">
     <!-- Tailwind CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <!-- فونت فارسی Vazirmatn -->
     <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/dist/font-face.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
     <style>
       body, h1, h2, h3, h4, h5, h6, input, textarea, button {
         font-family: 'Vazirmatn', 'Tahoma', sans-serif !important;
@@ -22,8 +22,8 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "تعمیرگاه لپتاپ Samtronic",
-      "image": "https://example.com/photos/1x1/photo.jpg",
+      "name": "تعمیرگاه سامترونیک",
+      "image": "https://samserv.ir/assets/images/logo.png",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "کرج - مهرشهر بلوار امیرکبیر پاساژ بوستان مهر 2 زیرزمین واحد 7",
@@ -60,14 +60,14 @@
 <body class="font-sans bg-gradient-to-t from-gray-50 to-gray-200 min-h-screen">
     <header class="bg-blue-800 text-white shadow-lg">
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="/index.html" class="text-2xl font-bold">Samtronic</a>
+            <a href="index.html" class="text-2xl font-bold">سامترونیک</a>
             <ul class="flex space-x-4 space-x-reverse">
-                <li><a href="/index.html" class="hover:text-blue-200">خانه</a></li>
-                <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                <li><a href="/learn.html" class="hover:text-blue-200">آموزش</a></li>
-                <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                <li><a href="index.html" class="hover:text-blue-200">خانه</a></li>
+                <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                <li><a href="learn.html" class="hover:text-blue-200">آموزش</a></li>
+                <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
             </ul>
         </nav>
     </header>
@@ -76,49 +76,159 @@
 
 <main class="container mx-auto px-4 py-8">
     <h1 class="text-3xl font-bold mb-8">خدمات تعمیرات</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="bg-white p-8 rounded-2xl shadow-lg">
-            <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعویض قطعات</h2>
-            <p>تعویض انواع قطعات لپتاپ شامل:</p>
-            <ul class="list-disc list-inside mt-2 text-gray-700">
-                <li>صفحه نمایش</li>
-                <li>کیبورد</li>
-                <li>هارد دیسک و SSD</li>
-                <li>رم</li>
-                <li>باتری</li>
-            </ul>
-        </div>
-        <div class="bg-white p-8 rounded-2xl shadow-lg">
-            <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر مادربرد</h2>
-            <p>تعمیر تخصصی مادربرد لپتاپ شامل:</p>
-            <ul class="list-disc list-inside mt-2 text-gray-700">
-                <li>رفع مشکلات گرافیکی</li>
-                <li>تعویض چیپست</li>
-                <li>رفع مشکلات شارژ</li>
-                <li>تعمیر و تعویض سوکت‌ها</li>
-            </ul>
-        </div>
-        <div class="bg-white p-8 rounded-2xl shadow-lg">
-            <h2 class="text-2xl font-semibold mb-4 text-blue-800">بازیابی اطلاعات</h2>
-            <p>بازیابی اطلاعات از انواع حافظه‌ها:</p>
-            <ul class="list-disc list-inside mt-2 text-gray-700">
-                <li>هارد دیسک</li>
-                <li>SSD</li>
-                <li>کارت حافظه</li>
-                <li>فلش مموری</li>
-            </ul>
-        </div>
-        <div class="bg-white p-8 rounded-2xl shadow-lg">
-            <h2 class="text-2xl font-semibold mb-4 text-blue-800">نصب و ارتقاء نرم‌افزار</h2>
-            <p>خدمات نرم‌افزاری شامل:</p>
-            <ul class="list-disc list-inside mt-2 text-gray-700">
-                <li>نصب و راه‌اندازی سیستم‌عامل</li>
-                <li>نصب درایورها</li>
-                <li>نصب نرم‌افزارهای کاربردی</li>
-                <li>بهینه‌سازی عملکرد سیستم</li>
-            </ul>
-        </div>
+    
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعویض قطعات</h2>
+        <p>تعویض انواع قطعات لپتاپ شامل:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>صفحه نمایش</li>
+            <li>کیبورد</li>
+            <li>هارد دیسک و SSD</li>
+            <li>رم</li>
+            <li>باتری</li>
+        </ul>
     </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر مادربرد</h2>
+        <p>تعمیر تخصصی مادربرد لپتاپ شامل:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع مشکلات گرافیکی</li>
+            <li>تعویض چیپست</li>
+            <li>رفع مشکلات شارژ</li>
+            <li>تعمیر و تعویض سوکت‌ها</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">بازیابی اطلاعات</h2>
+        <p>بازیابی اطلاعات از انواع حافظه‌ها:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>هارد دیسک</li>
+            <li>SSD</li>
+            <li>کارت حافظه</li>
+            <li>فلش مموری</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">نصب و ارتقاء نرم‌افزار</h2>
+        <p>خدمات نرم‌افزاری شامل:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>نصب و راه‌اندازی سیستم‌عامل</li>
+            <li>نصب درایورها</li>
+            <li>نصب نرم‌افزارهای کاربردی</li>
+            <li>بهینه‌سازی عملکرد سیستم</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر دستگاه اینورتر</h2>
+        <p>عیب‌یابی و تعمیر انواع اینورترهای صنعتی و خانگی:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع مشکلات تبدیل ولتاژ و جریان</li>
+            <li>تعویض قطعات معیوب و تست کامل</li>
+            <li>بهینه‌سازی عملکرد دستگاه</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر باند بلوتوث و اسپیکر</h2>
+        <p>تشخیص و تعمیر خرابی‌های باند بلوتوث و اسپیکر:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع نویز و قطعی صدا</li>
+            <li>تعویض باتری و قطعات صوتی</li>
+            <li>بهبود کیفیت پخش صدا</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر پاوربانک</h2>
+        <p>تعمیر و سرویس پاوربانک‌ها:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>تعمیر مدار شارژ و محافظت</li>
+            <li>تعویض سلول‌های باتری معیوب</li>
+            <li>تعویض کانکتورهای USB</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر مودم و مودم سیم‌کارتی</h2>
+        <p>خدمات تخصصی مودم:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع خرابی‌های ارتباطی و شبکه</li>
+            <li>بروزرسانی فریمور مودم</li>
+            <li>تعویض پورت شبکه و سیم‌کارت</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر آداپتور لپتاپ</h2>
+        <p>عیب‌یابی و تعمیر انواع آداپتور:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>تشخیص خرابی سیم و مدار</li>
+            <li>تعویض کابل و سوکت شارژ</li>
+            <li>استفاده از قطعات اصلی و باکیفیت</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر ایرپاد، هدفون و هدست</h2>
+        <p>خدمات تخصصی انواع هدست و هندزفری:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع نویز و مشکلات اتصال</li>
+            <li>تعویض باتری و اجزای داخلی</li>
+            <li>بازگرداندن کیفیت صدا</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر مانیتور و رایانه شخصی</h2>
+        <p>تعمیر تخصصی مانیتور و PC:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع ایراد تصویر و نور پس‌زمینه</li>
+            <li>تعمیر مدار تغذیه و برق</li>
+            <li>ارتقاء سخت‌افزاری و رفع مشکلات بوت</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر رسیور و تلویزیون</h2>
+        <p>تعمیر انواع رسیور و تلویزیون:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع مشکل دریافت سیگنال و تصویر</li>
+            <li>تعویض بردهای معیوب و تغذیه</li>
+            <li>بروزرسانی نرم‌افزار و فریمور</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر برد تغذیه و سوئیچینگ</h2>
+        <p>تعمیر بردهای تغذیه سوئیچینگ دستگاه‌ها:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>تعویض خازن‌ها و قطعات سوخته</li>
+            <li>رفع نوسان ولتاژ و جریان</li>
+            <li>تست و کالیبراسیون پس از تعمیر</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر آیفون (درب بازکن)</h2>
+        <p>خدمات آیفون تصویری و صوتی:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع مشکلات صدا و تصویر</li>
+            <li>تعویض برد و نمایشگر</li>
+            <li>تنظیم و نصب سیستم‌های حفاظتی</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر پاور کامپیوتر</h2>
+        <p>تعمیر و سرویس منابع تغذیه PC:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>تعویض خازن‌های معیوب</li>
+            <li>تست ولتاژ خروجی و عملکرد</li>
+            <li>تمیزکاری و سرویس کامل</li>
+        </ul>
+    </div>
+    <div class="bg-white p-8 rounded-2xl shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4 text-blue-800">تعمیر پرینتر</h2>
+        <p>سرویس و تعمیر انواع پرینتر:</p>
+        <ul class="list-disc list-inside mt-2 text-gray-700">
+            <li>رفع گیرکردن و کشیدن کاغذ</li>
+            <li>تعویض کارتریج و تونر</li>
+            <li>عیب‌یابی و تعمیر برد کنترل</li>
+        </ul>
+    </div>
+</div>
+
 </main>
 
 
@@ -127,7 +237,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap justify-between gap-8">
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
-                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه لپتاپ Samtronic</h3>
+                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه سامترونیک</h3>
                     <p>ارائه خدمات تخصصی تعمیر لپتاپ با کیفیت بالا و گارانتی معتبر</p>
                 </div>
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
@@ -139,18 +249,18 @@
                 <div class="w-full md:w-1/3">
                     <h3 class="text-xl font-semibold mb-4">لینک‌های مفید</h3>
                     <ul>
-                        <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                        <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                        <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                        <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                        <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                        <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                        <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                        <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
                     </ul>
                 </div>
             </div>
             <div class="mt-8 text-center">
-                <p>&copy; 2025 تعمیرگاه لپتاپ Samtronic. تمامی حقوق محفوظ است.</p>
+                <p>&copy; 2025 تعمیرگاه سامترونیک. تمامی حقوق محفوظ است.</p>
             </div>
         </div>
     </footer>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
