--- a/thank_you.html
+++ b/thank_you.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <link rel="canonical" href="">
-    <!-- Tailwind CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <!-- فونت فارسی Vazirmatn -->
-    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/dist/font-face.css" rel="stylesheet">
-    <link href="/assets/css/style.css" rel="stylesheet">
+    <!-- عنوان و توضیحات صفحه تشکر -->
+    <title>پیام شما ارسال شد | سامترونیک</title>
+    <meta name="description" content="پیام شما با موفقیت ارسال شد. از تماس شما با تعمیرگاه سامترونیک سپاسگزاریم. ما در اسرع وقت با شما تماس خواهیم گرفت.">
+    <meta name="keywords" content="پیام ارسال شد, سامترونیک, تعمیرگاه لپتاپ کرج, تماس سامترونیک">
+    <link rel="canonical" href="https://samserv.ir/thank_you.html">
+    <!-- فایل‌های استایل محلی -->
+    <!-- فریم‌ورک Tailwind و فونت فارسی Vazirmatn در پوشه assets/css قرار دارند تا صفحات سریعتر و بدون وابستگی خارجی بارگذاری شوند -->
+    <link href="assets/css/tailwind.min.css" rel="stylesheet">
+    <link href="assets/css/vazirmatn.css" rel="stylesheet">
+    <!-- استایل‌های سفارشی -->
+    <link href="assets/css/style.css" rel="stylesheet">
     <style>
       body, h1, h2, h3, h4, h5, h6, input, textarea, button {
         font-family: 'Vazirmatn', 'Tahoma', sans-serif !important;
@@ -22,8 +24,8 @@
     {
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
-      "name": "تعمیرگاه لپتاپ Samtronic",
-      "image": "https://example.com/photos/1x1/photo.jpg",
+      "name": "تعمیرگاه سامترونیک",
+      "image": "https://samserv.ir/assets/images/logo.png",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "کرج - مهرشهر بلوار امیرکبیر پاساژ بوستان مهر 2 زیرزمین واحد 7",
@@ -60,14 +62,15 @@
 <body class="font-sans bg-gradient-to-t from-gray-50 to-gray-200 min-h-screen">
     <header class="bg-blue-800 text-white shadow-lg">
         <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="/index.html" class="text-2xl font-bold">Samtronic</a>
+            <!-- لوگوی سایت و منو ناوبری -->
+            <a href="index.html" class="text-2xl font-bold">سامترونیک</a>
             <ul class="flex space-x-4 space-x-reverse">
-                <li><a href="/index.html" class="hover:text-blue-200">خانه</a></li>
-                <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                <li><a href="/learn.html" class="hover:text-blue-200">آموزش</a></li>
-                <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                <li><a href="index.html" class="hover:text-blue-200">خانه</a></li>
+                <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                <li><a href="learn.html" class="hover:text-blue-200">آموزش</a></li>
+                <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
             </ul>
         </nav>
     </header>
@@ -88,7 +91,7 @@
         <div class="container mx-auto px-4">
             <div class="flex flex-wrap justify-between gap-8">
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
-                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه لپتاپ Samtronic</h3>
+                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه سامترونیک</h3>
                     <p>ارائه خدمات تخصصی تعمیر لپتاپ با کیفیت بالا و گارانتی معتبر</p>
                 </div>
                 <div class="w-full md:w-1/3 mb-6 md:mb-0">
@@ -100,18 +103,18 @@
                 <div class="w-full md:w-1/3">
                     <h3 class="text-xl font-semibold mb-4">لینک‌های مفید</h3>
                     <ul>
-                        <li><a href="/services.html" class="hover:text-blue-200">خدمات</a></li>
-                        <li><a href="/gallery.html" class="hover:text-blue-200">گالری</a></li>
-                        <li><a href="/blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
-                        <li><a href="/contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                        <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                        <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                        <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                        <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
                     </ul>
                 </div>
             </div>
             <div class="mt-8 text-center">
-                <p>&copy; 2025 تعمیرگاه لپتاپ Samtronic. تمامی حقوق محفوظ است.</p>
+                <p>&copy; 2025 تعمیرگاه سامترونیک. تمامی حقوق محفوظ است.</p>
             </div>
         </div>
     </footer>
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
