--- a/index.html
+++ b/index.html
@@ -1,4 +1,203 @@
-<!-- Latest Update Section -->
+
+<!DOCTYPE html>
+<html lang="fa" dir="rtl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>تعمیر لپتاپ و تجهیزات الکترونیکی در کرج | سامترونیک</title>
+    <meta name="description" content="سامترونیک مرکز تخصصی تعمیرات انواع لپتاپ، سخت‌افزار و نرم‌افزار، تعویض قطعات، تعمیر دستگاه اینورتر، باند بلوتوث، پاوربانک، مودم، تجهیزات صوتی و تصویری و سایر دستگاه‌های الکترونیکی در کرج است. ما خدماتی سریع، با گارانتی و با استفاده از قطعات اصلی ارائه می‌دهیم.">
+    <meta name="keywords" content="تعمیر لپتاپ کرج, تعمیر سخت افزار لپتاپ, تعمیر نرم افزار لپتاپ, تعمیر اینورتر, تعمیر باند بلوتوث, تعمیر پاوربانک, تعمیر مودم, تعمیر مودم سیمکارتی, تعمیر آداپتور لپتاپ, تعمیر ایرپاد, تعمیر اسپیکر, تعمیر هدفون, تعمیر هدست, تعمیر مانیتور, تعمیر کامپیوتر, تعمیر رسیور, تعمیر تلویزیون, تعمیر برد تغذیه, تعمیر آیفون درب بازکن, تعمیر پاور کامپیوتر, تعمیر پرینتر, سامترونیک, تعمیرات کرج">
+    <link rel="canonical" href="https://samserv.ir/">
+    <!-- Tailwind CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <!-- فونت فارسی Vazirmatn -->
+    <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn-font@v33.003/dist/font-face.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet">
+    <style>
+      body, h1, h2, h3, h4, h5, h6, input, textarea, button {
+        font-family: 'Vazirmatn', 'Tahoma', sans-serif !important;
+      }
+    </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "تعمیرگاه سامترونیک",
+      "image": "https://samserv.ir/assets/images/logo.png",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "کرج - مهرشهر بلوار امیرکبیر پاساژ بوستان مهر 2 زیرزمین واحد 7",
+        "addressLocality": "کرج",
+        "addressRegion": "البرز",
+        "postalCode": "31485",
+        "addressCountry": "IR"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 35.784800,
+        "longitude": 50.854534
+      },
+      "telephone": "02633206652",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday",
+            "Sunday"
+          ],
+          "opens": "09:00",
+          "closes": "21:00"
+        }
+      ]
+    }
+    </script>
+</head>
+<body class="font-sans bg-gradient-to-t from-gray-50 to-gray-200 min-h-screen">
+    <header class="bg-blue-800 text-white shadow-lg">
+        <nav class="container mx-auto px-4 py-4 flex justify-between items-center">
+            <a href="index.html" class="text-2xl font-bold">سامترونیک</a>
+            <ul class="flex space-x-4 space-x-reverse">
+                <li><a href="index.html" class="hover:text-blue-200">خانه</a></li>
+                <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                <li><a href="learn.html" class="hover:text-blue-200">آموزش</a></li>
+                <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+            </ul>
+        </nav>
+    </header>
+   
+
+
+
+
+<main>
+    <!-- Hero Section -->
+    <section class="bg-blue-700 text-white py-20 shadow-lg rounded-b-3xl relative overflow-hidden">
+        <div class="absolute inset-0 z-0">
+            <img src="assets/images/hero-bg.png" alt="پس‌زمینه مدار الکترونیکی تعمیرگاه سامترونیک" class="w-full h-full object-cover opacity-30">
+        </div>
+        <div class="container mx-auto text-center px-4 flex flex-col items-center relative z-10">
+            <img src="assets/images/logo.png" alt="لوگو سامترونیک" class="w-40 h-40 object-contain rounded-full bg-white p-4 shadow-lg mb-6 animate-pulse">
+            <h1 class="text-4xl md:text-5xl font-bold mb-4 drop-shadow-lg">تعمیرگاه تخصصی لپتاپ و دستگاه‌های الکترونیکی سامترونیک</h1>
+            <p class="text-lg md:text-2xl mb-8">ارائه خدمات حرفه‌ای با قطعات اصلی و گارانتی معتبر در کوتاه‌ترین زمان</p>
+            <a href="contact.html" class="bg-white text-blue-700 py-3 px-8 rounded-full text-lg font-semibold hover:bg-blue-100 transition duration-300 shadow-md hover:shadow-lg transform hover:-translate-y-1">تماس با ما</a>
+        </div>
+    </section>
+
+    <!-- Services Section -->
+    <section id="services" class="py-16 bg-gray-100 mt-8">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-12 text-blue-800">خدمات ما</h2>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
+                    <img src="assets/images/hardware-repair.png" alt="تصویر تعمیر سخت‌افزار لپتاپ" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-center text-blue-700">تعمیرات سخت‌افزاری</h3>
+                    <p class="text-center text-gray-600">تعمیر انواع قطعات سخت‌افزاری لپتاپ با دقت و کیفیت بالا</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
+                    <img src="assets/images/software-repair.png" alt="تصویر تعمیر نرم‌افزار لپتاپ" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-center text-blue-700">تعمیرات نرم‌افزاری</h3>
+                    <p class="text-center text-gray-600">رفع مشکلات نرم‌افزاری، نصب و بهینه‌سازی سیستم‌عامل</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300 transform hover:-translate-y-2">
+                    <img src="assets/images/parts-replacement.png" alt="تصویر تعویض قطعات لپتاپ" class="w-full h-48 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-center text-blue-700">تعویض قطعات</h3>
+                    <p class="text-center text-gray-600">تعویض قطعات با استفاده از قطعات اصلی و با گارانتی</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Why Choose Us Section -->
+    <section id="why-us" class="py-16 bg-blue-50">
+        <div class="container mx-auto px-4">
+            <h2 class="text-3xl font-bold text-center mb-12 text-blue-800">چرا سامترونیک را انتخاب کنید؟</h2>
+            <div class="grid grid-cols-1 md:grid-cols-4 gap-8 text-center">
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300">
+                    <img src="assets/images/experience.png" alt="آیکون تخصص و تجربه" class="w-16 h-16 mx-auto mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-blue-700">تخصص و تجربه</h3>
+                    <p class="text-gray-600">بیش از 10 سال تجربه در تعمیر انواع لپتاپ</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300">
+                    <img src="assets/images/speed.png" alt="آیکون سرعت در خدمات" class="w-16 h-16 mx-auto mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-blue-700">سرعت در خدمات</h3>
+                    <p class="text-gray-600">انجام سریع خدمات با حفظ کیفیت و دقت بالا</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300">
+                    <img src="assets/images/security.png" alt="آیکون امنیت اطلاعات" class="w-16 h-16 mx-auto mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-blue-700">امنیت اطلاعات</h3>
+                    <p class="text-gray-600">حفظ حریم خصوصی و امنیت کامل اطلاعات مشتریان</p>
+                </div>
+                <div class="bg-white p-6 rounded-xl shadow-md hover:shadow-xl transition duration-300">
+                    <img src="assets/images/satisfaction.png" alt="آیکون رضایت مشتری" class="w-16 h-16 mx-auto mb-4">
+                    <h3 class="text-xl font-semibold mb-2 text-blue-700">رضایت مشتری</h3>
+                    <p class="text-gray-600">اولویت ما رضایت کامل مشتری از خدمات ارائه‌شده است</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Video Section -->
+    <!-- Video Section -->
+<section id="video-tutorial" class="py-16">
+    <div class="container mx-auto px-4">
+        <h2 class="text-3xl font-bold text-center mb-12 text-blue-800">آموزش ویدیویی</h2>
+        <div class="max-w-3xl mx-auto">
+            <div class="video-wrapper">
+                <video controls poster="assets/images/video-thumb.png">
+                    <source src="assets/videos/laptop-repair-tutorial.mp4" type="video/mp4">
+                    مرورگر شما از پخش ویدیو پشتیبانی نمی‌کند.
+                </video>
+            </div>
+            <p class="mt-4 text-center text-gray-600">آموزش اصول اولیه تعمیر لپتاپ</p>
+        </div>
+    </div>
+</section>
+
+</main>
+
+
+
+<script src="assets/js/main.js"></script>
+
+
+    <footer class="bg-blue-800 text-white py-8 mt-12 shadow-inner">
+        <div class="container mx-auto px-4">
+            <div class="flex flex-wrap justify-between gap-8">
+                <div class="w-full md:w-1/3 mb-6 md:mb-0">
+                    <h3 class="text-xl font-semibold mb-4">تعمیرگاه سامترونیک</h3>
+                    <p>ارائه خدمات تخصصی تعمیر لپتاپ با کیفیت بالا و گارانتی معتبر</p>
+                </div>
+                <div class="w-full md:w-1/3 mb-6 md:mb-0">
+                    <h3 class="text-xl font-semibold mb-4">تماس با ما</h3>
+                    <p>آدرس: کرج - مهرشهر بلوار امیرکبیر پاساژ بوستان مهر 2 زیرزمین واحد 7</p>
+                    <p>تلفن: 02633206652</p>
+                    <p>ساعات کاری: 9 صبح تا 9 شب</p>
+                </div>
+                <div class="w-full md:w-1/3">
+                    <h3 class="text-xl font-semibold mb-4">لینک‌های مفید</h3>
+                    <ul>
+                        <li><a href="services.html" class="hover:text-blue-200">خدمات</a></li>
+                        <li><a href="gallery.html" class="hover:text-blue-200">گالری</a></li>
+                        <li><a href="blog/index.html" class="hover:text-blue-200">وبلاگ</a></li>
+                        <li><a href="contact.html" class="hover:text-blue-200">تماس با ما</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="mt-8 text-center">
+                <p>&copy; 2025 تعمیرگاه سامترونیک. تمامی حقوق محفوظ است.</p>
+            </div>
+        </div>
+    </footer>
+    <script src="assets/js/main.js"></script>
+</body>
+    <!-- Latest Update Section -->
 <section id="latest-update-section" class="py-16 bg-yellow-50">
     <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-8 text-yellow-800">آخرین خبر</h2>
@@ -7,3 +206,5 @@
         </div>
     </div>
 </section>
+</html>
+
